Added example.txt from PDF

--- a/A1_DATASET/test.ipynb
+++ b/A1_DATASET/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 145,
    "id": "f0169c2c",
    "metadata": {},
    "outputs": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 146,
    "id": "55a562b3",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 147,
    "id": "e3d7a811",
    "metadata": {},
    "outputs": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 148,
    "id": "73cc195f",
    "metadata": {},
    "outputs": [],
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 149,
    "id": "8bb8f187",
    "metadata": {},
    "outputs": [
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 161,
    "id": "0bb7989d",
    "metadata": {},
    "outputs": [],
@@ -159,23 +159,92 @@
     "  def __init__(self, unigram_counts, bigram_counts=None):\n",
     "    self.unigram_counts = unigram_counts\n",
     "    self.bigram_counts = bigram_counts\n",
-    "    self.total_unigram_count = sum(unigram_counter.values())\n",
+    "    self.total_unigram_count = sum(self.unigram_counts.values())\n",
     "\n",
     "    if bigram_counts: # If asking for Bigram Model\n",
     "      self.bigram_context_counter = Counter()\n",
-    "      for (word_1, word_2), count in bigram_counter.items(): # Format is Tuple(Tuple(word_1, word_2), number_appearance)\n",
-    "        self.bigram_context_counter[word_1] += count\n",
+    "      for (word_1, word_2), count in bigram_counts.items(): # item() format is Tuple(Tuple(word_1, word_2), number_appearance)\n",
+    "        self.bigram_context_counter[word_1] += count # This is the same as the unigarm_counts\n",
     "      \n",
     "\n",
     "  def unigram_probability(self, word):\n",
     "    return self.unigram_counts[word] / self.total_unigram_count\n",
     "  \n",
-    "  def bigram_probability(self, word_1, word_2):\n",
-    "    if self.bigram_context_counter[word_1] == 0: \n",
+    "  def bigram_probability(self, ask, given):\n",
+    "    if self.bigram_context_counter[given] == 0: \n",
+    "      print(\"Unseen Before\")\n",
     "      return 0 # Unseen before\n",
     "    else:\n",
-    "      # Return number of times {word_2| word_1} \\over number of {word_1}\n",
-    "      return self.bigram_context_counter[(word_1, word_2)]/ self.bigram_context_counter[word_1]\n"
+    "      # Return number of times { ask | Given} \\over number of {Given}\n",
+    "      return self.bigram_counts[(given, ask)]/ self.bigram_context_counter[given]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "id": "d2f14ed6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1659 1659\n"
+     ]
+    }
+   ],
+   "source": [
+    "tester = NGramModel(unigram_counter, bigram_counter)\n",
+    "print(tester.unigram_counts['I'], tester.bigram_context_counter[\"I\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "id": "dc965baf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def handle_unknown_words(word_counts, threshold=5):\n",
+    "  vocab = set()\n",
+    "  unknown = 0\n",
+    "\n",
+    "  for word, count in word_counts.items():\n",
+    "    if count > threshold:\n",
+    "      vocab.add(word)\n",
+    "    else:\n",
+    "      unknown += count\n",
+    "    \n",
+    "  #After the for loop, the total \"Unknown\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 163,
+   "id": "598e7d29",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Counter({('<s>', 'the'): 1, ('the', 'students'): 1, ('students', 'like'): 1, ('like', 'the'): 1, ('the', 'assignment'): 1, ('assignment', '.'): 1, ('.', '</s>'): 1})\n",
+      "Counter({'the': 2, '<s>': 1, 'students': 1, 'like': 1, 'assignment': 1, '.': 1})\n",
+      "Counter({'the': 2, '<s>': 1, 'students': 1, 'like': 1, 'assignment': 1, '.': 1, '</s>': 1})\n",
+      "0.25 0.125\n",
+      "1.0 0.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "example_bi = collect_bigram(\"example.txt\")\n",
+    "example_uni = collect_unigram(\"example.txt\")\n",
+    "example_tester = NGramModel(example_uni, example_bi)\n",
+    "print(example_bi)\n",
+    "print(example_tester.bigram_context_counter) #\n",
+    "print(example_tester.unigram_counts)\n",
+    "print(example_tester.unigram_probability(\"the\"), example_tester.unigram_probability(\"like\"))\n",
+    "print(example_tester.bigram_probability(ask=\"the\", given=\"like\"), example_tester.bigram_probability(\"students\", \"the\")) # 1.0, 0.5\n"
    ]
   }
  ],
