--- a/A1_DATASET/test.ipynb
+++ b/A1_DATASET/test.ipynb
@@ -148,12 +148,12 @@
     "      # Return number of times { ask | Given} \\over number of {Given}\n",
     "      return self.bigram_counts[(given, ask)]/ self.bigram_context_counter[given]\n",
     "  \n",
-    "  def laplace_smoothing(self, w1, w2=None): #Add 1 Method\n",
-    "      v_size = len(self.unigram_counts)\n",
-    "      if w2 is None:  # Unigram\n",
-    "          return (self.unigram_counts[w1] + 1) / (self.total_unigram_count + v_size)\n",
-    "      else:  # Bigram \n",
-    "          return (self.bigram_counts[(w1, w2)] + 1) / (self.bigram_context_counter[w1] + v_size)\n"
+    "  def add_k_smoothing(self, w1, w2=None, k = 1): #Add 1 Method\n",
+    "    v_size = len(self.unigram_counts)\n",
+    "    if w2 is None:  # Unigram\n",
+    "        return (self.unigram_counts[w1] + k) / (self.total_unigram_count + ( k * v_size ))\n",
+    "    else:  # Bigram \n",
+    "        return (self.bigram_counts[(w1, w2)] + k) / ( self.bigram_context_counter[w1] + (v_size  * k))\n"
    ]
   },
   {
@@ -195,7 +195,7 @@
     "  # The idea is to remake the Tuple frequency: for any tuple such that frequency < 'threshold', replace with  <UNK>\n",
     "  vocab = set()\n",
     "  unknown = 0\n",
-    "  special_token: {'<s>', '</s>', '<UNK>'}\n",
+    "  special_token = {'<s>', '</s>', '<UNK>'}\n",
     "  vocab.update(special_token)\n",
     "\n",
     "  for word, count in word_counts.items():\n",
@@ -233,12 +233,95 @@
     "  train_unigram = collect_unigram(train_file) # ('word', frequency)\n",
     "  train_bigram = collect_bigram(train_file) # (('Given', 'Ask'), frequency)\n",
     "\n",
-    "  vocab, processed_uni, processed_bi = handle_unknown_words(train_unigram, train_bigram, threshold) #\n",
+    "  vocab, processed_uni, processed_bi = handle_unknown_words(train_unigram, train_bigram, threshold) #Vocab with frequency > 5, and using the criteria to get processed_uni and bi, which contains <UNK>\n",
     "\n",
     "  model = NGramModel(processed_uni, processed_bi)\n",
     "  model.vocab = vocab\n",
     "\n",
     "  return model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ffbad6e1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "\n",
+    "def perplexity(val_file, model: NGramModel, k_smoothing):\n",
+    "  pp = 0\n",
+    "  val_file_words = 0\n",
+    "  unknown_count = 0\n",
+    "  \n",
+    "  with open(val_file, \"r\") as f:\n",
+    "    for line in f.readlines():\n",
+    "      line = line.strip()\n",
+    "      if not line:\n",
+    "        continue\n",
+    "      line = \" <s> \" + line + \" </s> \"\n",
+    "      words = line.split()\n",
+    "\n",
+    "      original_words = words.copy()\n",
+    "      words = [w if w in model.vocab else '<UNK>' for w in words] \n",
+    "      # unknown_count += sum(1 for orig, new in zip ( original_words, words ) if new == '<UNK>')\n",
+    "      for i in range(len(words)):\n",
+    "        if i == 0:\n",
+    "          prob = model.add_k_smoothing(words[i],k = k_smoothing)\n",
+    "        else:\n",
+    "          prob = model.add_k_smoothing(words[i - 1], words[i], k_smoothing)\n",
+    "        if prob == 0:\n",
+    "          print(\"Uh, Why 0 prob?\")\n",
+    "        else:\n",
+    "          pp += math.log(prob)\n",
+    "          \n",
+    "        val_file_words += 1\n",
+    "        print(f\"Unknown word in {val_file}: {unknown_count}\")\n",
+    "    return math.exp( -pp / val_file_words)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "fff1e663",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def main():\n",
+    "  model = train_model(\"train.txt\", threshold=5)\n",
+    "\n",
+    "  print(\"Vocab size :\", len( model.vocab  ))\n",
+    "  print(\"Unigram\", model.total_unigram_count)\n",
+    "\n",
+    "  for k in [0.1, 0.6, 1, 2]:\n",
+    "    train_pp = perplexity(\"train.txt\", model, k)\n",
+    "    val_pp = perplexity(\"val.txt\", model, k)\n",
+    "    print(f\"k= {k}: Train PP = {train_pp}, val pp = {val_pp}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "233873df",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Vocab size : 1387\n",
+      "Unigram 90708\n",
+      "k= 0.1: Train PP = 58.192887650092786, val pp = 89.73473766774906\n",
+      "k= 0.6: Train PP = 118.21592974102361, val pp = 142.1014238772904\n",
+      "k= 1: Train PP = 150.03057788578084, val pp = 170.60179494345215\n",
+      "k= 2: Train PP = 209.12321470217225, val pp = 224.03332629370527\n"
+     ]
+    }
+   ],
+   "source": [
+    "main()"
    ]
   }
  ],
