Removing punctuation on tokens

--- a/A1_DATASET/test.ipynb
+++ b/A1_DATASET/test.ipynb
@@ -76,6 +76,7 @@
     "            comment = \" <s> \" + comment + \" </s> \" # Comment delimiter\n",
     "            #print(comment)\n",
     "            words = comment.split()  # Split into individual tokens\n",
+    "            words = [t for t in words if t not in string.punctuation] #removes the punctuation from the vocabulary",
     "            for word in words:\n",
     "                unigram_counter[word] += 1  # Count each word\n",
     "    \n",
@@ -89,6 +90,7 @@
     "            comment = comment.strip()\n",
     "            comment = \" <s> \" + comment + \" </s> \"\n",
     "            words = comment.split()\n",
+    "            words = [t for t in words if t not in string.punctuation] #removes the punctuation from the vocabulary",
     "            \n",
     "            for i in range(len(words) - 1): # Last one can't form a Tuple\n",
     "                bigram = (words[i], words[i + 1])  # Tuple of two consecutive words\n",
