Clear outputs of file

--- a/A1_DATASET/test.ipynb
+++ b/A1_DATASET/test.ipynb
@@ -1219,7 +1219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "id": "dc965baf",
    "metadata": {},
    "outputs": [],
@@ -1228,7 +1228,7 @@
     "  # The idea is to remake the Tuple frequency: for any tuple such that frequency < 'threshold', replace with  <UNK>\n",
     "  vocab = set()\n",
     "  unknown = 0\n",
-    "  special_token = {'<s>', '</s>', '<UNK>'}\n",
+    "  special_tokens = {START_TOKEN, END_TOKEN, UNKNOWN_TOKEN}\n",
     "  vocab.update(special_token)\n",
     "\n",
     "  for word, count in word_counts.items():\n",
