Add type hints everywhere

--- a/A1_DATASET/test.ipynb
+++ b/A1_DATASET/test.ipynb
@@ -2,10 +2,31 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "f0169c2c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package stopwords to /Users/nigam/nltk_data...\n",
+      "[nltk_data]   Package stopwords is already up-to-date!\n",
+      "[nltk_data] Downloading package punkt_tab to /Users/nigam/nltk_data...\n",
+      "[nltk_data]   Package punkt_tab is already up-to-date!\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import nltk\n",
     "from collections import Counter\n",
@@ -16,12 +37,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "85056002-8707-4663-9242-abe9dcec2a08",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from typing import List, Dict, Callable\n",
+    "from typing import List, Tuple, Callable\n",
     "from string import punctuation\n",
     "\n",
     "START_TOKEN: str = \"<s>\"\n",
@@ -50,10 +71,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "7850f35f-b2e7-4db1-b445-f497ebd70564",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('<s>', 512), ('I', 1659), ('booked', 81), ('two', 120), ('rooms', 183)]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "### UNIT TESTS ###\n",
     "\n",
@@ -67,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "73cc195f",
    "metadata": {},
    "outputs": [],
@@ -90,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "2b2ee246-5661-4e45-aa5d-0a0146592f52",
    "metadata": {},
    "outputs": [],
@@ -101,27 +133,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "0bb7989d",
    "metadata": {},
    "outputs": [],
    "source": [
     "class NGramModel:\n",
-    "  def __init__(self, unigram_counts, bigram_counts=None):\n",
-    "    self.unigram_counts = unigram_counts # ( word, number_occurrence)\n",
-    "    self.bigram_counts = bigram_counts\n",
-    "    self.total_unigram_count = sum(self.unigram_counts.values())\n",
+    "  def __init__(self, unigram_counts: Counter, bigram_counts: Counter=None):\n",
+    "    self.unigram_counts: Counter = unigram_counts # ( word, number_occurrence)\n",
+    "    self.bigram_counts: Counter = bigram_counts\n",
+    "    self.total_unigram_count: int = sum(self.unigram_counts.values())\n",
     "\n",
     "    if bigram_counts: # If asking for Bigram Model\n",
-    "      self.bigram_context_counter = Counter()\n",
-    "      for (word_1, word_2), count in bigram_counts.items(): # item() format is Tuple(Tuple(word_1, word_2), number_appearance)\n",
+    "      self.bigram_context_counter: Counter = Counter()\n",
+    "      for (word_1, word_2), count in bigram_counts.items():\n",
     "        self.bigram_context_counter[word_1] += count # This is the same as the unigarm_counts\n",
     "      \n",
     "\n",
-    "  def unigram_probability(self, word):\n",
+    "  def unigram_probability(self, word: str) -> float:\n",
     "    return self.unigram_counts[word] / self.total_unigram_count\n",
     "  \n",
-    "  def bigram_probability(self, ask, given):\n",
+    "  def bigram_probability(self, ask: str, given: Tuple[str, str]) -> float:\n",
     "    if self.bigram_context_counter[given] == 0: \n",
     "      print(\"Unseen Before\")\n",
     "      return 0 # Unseen before\n",
@@ -129,7 +161,7 @@
     "      # Return number of times { ask | Given} \\over number of {Given}\n",
     "      return self.bigram_counts[(given, ask)]/ self.bigram_context_counter[given]\n",
     "  \n",
-    "  def add_k_smoothing(self, w1, w2=None, k = 1): #Add 1 Method\n",
+    "  def add_k_smoothing(self, w1: str, w2: str | None=None, k: int=1) -> float: #Add 1 Method\n",
     "    v_size = len(self.unigram_counts)\n",
     "    if w2 is None:  # Unigram\n",
     "        return (self.unigram_counts[w1] + k) / (self.total_unigram_count + ( k * v_size ))\n",
@@ -139,10 +171,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "d2f14ed6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1659 1659\n"
+     ]
+    }
+   ],
    "source": [
     "tester = NGramModel(train_unigram_counter, train_bigram_counter)\n",
     "print(tester.unigram_counts['I'], tester.bigram_context_counter[\"I\"])"
@@ -150,10 +190,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "dfa724cc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Counter({('<s>', 'the'): 1, ('the', 'students'): 1, ('students', 'like'): 1, ('like', 'the'): 1, ('the', 'assignment'): 1, ('assignment', '</s>'): 1})\n",
+      "Counter({'the': 2, '<s>': 1, 'students': 1, 'like': 1, 'assignment': 1})\n",
+      "Counter({'the': 2, '<s>': 1, 'students': 1, 'like': 1, 'assignment': 1, '</s>': 1})\n",
+      "0.2857142857142857 0.14285714285714285\n",
+      "1.0 0.5\n"
+     ]
+    }
+   ],
    "source": [
     "example_bi = collect_bigram(\"example.txt\")\n",
     "example_uni = collect_unigram(\"example.txt\")\n",
@@ -167,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "dc965baf",
    "metadata": {},
    "outputs": [],
@@ -204,12 +256,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "6b541d9e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def train_model(train_file, threshold = 5):\n",
+    "def train_model(train_file, threshold = 5) -> NGramModel:\n",
     "  # Collect frequency in the train.txt\n",
     "  train_unigram = collect_unigram(train_file) # ('word', frequency)\n",
     "  train_bigram = collect_bigram(train_file) # (('Given', 'Ask'), frequency)\n",
@@ -224,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "ffbad6e1",
    "metadata": {},
    "outputs": [],
@@ -232,10 +284,10 @@
     "import math\n",
     "import sys\n",
     "\n",
-    "def perplexity(val_file, model: NGramModel, k_smoothing, verbose = False):\n",
-    "  pp = 0\n",
-    "  val_file_words = 0\n",
-    "  unknown_count = 0\n",
+    "def perplexity(val_file: str, model: NGramModel, k_smoothing: int, verbose: bool= False) -> float:\n",
+    "  pp: float = 0\n",
+    "  val_file_words: int = 0\n",
+    "  unknown_count: int = 0\n",
     "  \n",
     "  with open(val_file, \"r\") as f:\n",
     "    for line in f.readlines():\n",
@@ -243,7 +295,7 @@
     "      if not line:\n",
     "        continue\n",
     "      \n",
-    "      words = [START_TOKEN]\n",
+    "      words: List[str] = [START_TOKEN]\n",
     "      words += line.split()\n",
     "      words.append(END_TOKEN)\n",
     "\n",
@@ -270,29 +322,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "fff1e663",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def main():\n",
+    "def main() -> None:\n",
     "  model = train_model(\"train.txt\", threshold=5)\n",
     "\n",
     "  print(\"Vocab size :\", len( model.vocab  ))\n",
     "  print(\"Unigram\", model.total_unigram_count)\n",
     "\n",
     "  for k in [0.1, 0.6, 1, 2]:\n",
-    "    train_pp = perplexity(\"train.txt\", model, k)\n",
-    "    val_pp = perplexity(\"val.txt\", model, k)\n",
+    "    train_pp: float = perplexity(\"train.txt\", model, k)\n",
+    "    val_pp: float = perplexity(\"val.txt\", model, k)\n",
     "    print(f\"k= {k}: Train PP = {train_pp}, val pp = {val_pp}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "233873df",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Vocab size : 1372\n",
+      "Unigram 81064\n",
+      "k= 0.1: Train PP = 64.58924584039329, val pp = 92.28733140369668\n",
+      "k= 0.6: Train PP = 125.28150020993102, val pp = 145.35804818817155\n",
+      "k= 1: Train PP = 156.4117772509057, val pp = 173.28452043436914\n",
+      "k= 2: Train PP = 212.9051160297855, val pp = 224.50326538030558\n"
+     ]
+    }
+   ],
    "source": [
     "main()"
    ]
