Remove nltk dependency

--- a/A1_DATASET/test.ipynb
+++ b/A1_DATASET/test.ipynb
@@ -251,7 +251,8 @@
     "      words = [w if w in model.vocab else UNKNOWN_TOKEN for w in words] \n",
     "      # unknown_count += sum(1 for orig, new in zip ( original_words, words ) if new == '<UNK>')\n",
     "      for i in range(len(words)):\n",
-    "          \n",
+    "        if words[i] in punctuation:\n",
+    "            continue\n",
     "        if i == 0:\n",
     "          prob = model.add_k_smoothing(words[i], k = k_smoothing)\n",
     "        else:\n",
